@@ -1,5 +1,7 @@
 2002-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/sketch.scm: Fix beams.
+
 	* buildscripts/mf-to-table.py: Add EncodingScheme.
 
 	* scm/sketch.scm: Resurrect.
